# bandaid_backend

./: .gitignore  docker-compose.yaml  readme.md
bandaid_api/: .env  Cargo.toml  Dockerfile
bandaid_api/src/: main.rs
bandaid_api/src/db/: mod.rs  schema.rs
bandaid_api/src/db/models/: city.rs  mod.rs  user.rs
bandaid_api/src/routing/: mod.rs
bandaid_api/src/routing/cities/: mod.rs
bandaid_api/src/routing/countries/: mod.rs
bandaid_api/src/routing/mw/: guard.rs  jwt.rs  mod.rs
bandaid_api/src/routing/users/: create.rs  delete.rs  list.rs  login.rs  mod.rs
database/: Dockerfile  init.sql
