[package]
name = "bandaid_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "multipart"] }
bcrypt = "0.15.0"
chrono = "0.4.30"
diesel = { version = "2.1.1", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
